Issue #257 Rechte Sitemap - Scrollbar teilweise versteckt (Chrome)

--- a/bin/QUI/controls/permissions/Permission.css
+++ b/bin/QUI/controls/permissions/Permission.css
@@ -25,7 +25,7 @@
     border-right: 1px solid #dedede;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
     float: left;
-    height: calc(100% - 40px);
+    height: calc(100% - 50px);
     overflow: auto;
     position: relative;
     z-index: 2;
